force-app/main/default/objects/Legislative_District__c/Legislative_District__c.object-meta.xml
<CustomObject>
    <label>Legislative District</label>
    <nameField>
        <label>Legislative District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legislative Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>