force-app/main/default/objects/Legislative_District__c/fields/ADS_Participants__c.field-meta.xml
<CustomField>
    <fullName>ADS_Participants__c</fullName>
    <label>ADS Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>