force-app/main/default/objects/Legislative_District__c/fields/Adult_Population__c.field-meta.xml
<CustomField>
    <fullName>Adult_Population__c</fullName>
    <label>Adult Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>