force-app/main/default/objects/Legislative_District__c/fields/Autism_Services_Participants__c.field-meta.xml
<CustomField>
    <fullName>Autism_Services_Participants__c</fullName>
    <label>Autism Services Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>