force-app/main/default/objects/Legislative_District__c/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>Cities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alhambra</fullName>
            </value>
            <value>
                <fullName>Altadena</fullName>
            </value>
            <value>
                <fullName>Anaheim</fullName>
            </value>
            <value>
                <fullName>Artesia</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Barstow</fullName>
            </value>
            <value>
                <fullName>Bellflower</fullName>
            </value>
            <value>
                <fullName>Beverly Hills</fullName>
            </value>
            <value>
                <fullName>Brentwood</fullName>
            </value>
            <value>
                <fullName>Buena Park</fullName>
            </value>
            <value>
                <fullName>Burbank</fullName>
            </value>
            <value>
                <fullName>Calexico</fullName>
            </value>
            <value>
                <fullName>Camarillo</fullName>
            </value>
            <value>
                <fullName>Canoga Park</fullName>
            </value>
            <value>
                <fullName>Carlsbad</fullName>
            </value>
            <value>
                <fullName>Carson</fullName>
            </value>
            <value>
                <fullName>Cathedral City</fullName>
            </value>
            <value>
                <fullName>Cerritos</fullName>
            </value>
            <value>
                <fullName>Chino</fullName>
            </value>
            <value>
                <fullName>Chino Hills</fullName>
            </value>
            <value>
                <fullName>Chula Vista</fullName>
            </value>
            <value>
                <fullName>Claremont</fullName>
            </value>
            <value>
                <fullName>Coachella</fullName>
            </value>
            <value>
                <fullName>Colton</fullName>
            </value>
            <value>
                <fullName>Compton</fullName>
            </value>
            <value>
                <fullName>Corona</fullName>
            </value>
            <value>
                <fullName>Costa Mesa</fullName>
            </value>
            <value>
                <fullName>Covina</fullName>
            </value>
            <value>
                <fullName>Culver City</fullName>
            </value>
            <value>
                <fullName>Dana Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>