force-app/main/default/objects/Legislative_District__c/fields/Counties__c.field-meta.xml
<CustomField>
    <fullName>Counties__c</fullName>
    <label>Counties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Kern</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Luis Obispo</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Ventura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>