force-app/main/default/objects/Legislative_District__c/fields/Counties_Non_ESSC__c.field-meta.xml
<CustomField>
    <fullName>Counties_Non_ESSC__c</fullName>
    <label>Counties Non-ESSC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Kings</fullName>
            </value>
            <value>
                <fullName>Monterey</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Mateo</fullName>
            </value>
            <value>
                <fullName>Santa Clara</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Tulare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>