force-app/main/default/objects/Legislative_District__c/fields/District_ID__c.field-meta.xml
<CustomField>
    <fullName>District_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>District ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>