force-app/main/default/objects/Legislative_District__c/fields/District_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>District_Last_Updated__c</fullName>
    <label>District Last Updated</label>
    <type>Date</type>
</CustomField>