force-app/main/default/objects/Legislative_District__c/fields/District_Lookup_Source__c.field-meta.xml
<CustomField>
    <fullName>District_Lookup_Source__c</fullName>
    <label>District Lookup Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>