force-app/main/default/objects/Legislative_District__c/fields/Employment_Participants__c.field-meta.xml
<CustomField>
    <fullName>Employment_Participants__c</fullName>
    <label>Employment Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>