force-app/main/default/objects/Legislative_District__c/fields/Legislator__c.field-meta.xml
<CustomField>
    <fullName>Legislator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legislator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legislative Districts</relationshipLabel>
    <relationshipName>Legislative_Districts</relationshipName>
    <type>Lookup</type>
</CustomField>