force-app/main/default/objects/Legislative_District__c/fields/Living_Options_Participants__c.field-meta.xml
<CustomField>
    <fullName>Living_Options_Participants__c</fullName>
    <label>Living Options Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>