force-app/main/default/objects/Legislative_District__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legislative Districts (Organization)</relationshipLabel>
    <relationshipName>Legislative_Districts1</relationshipName>
    <type>Lookup</type>
</CustomField>