force-app/main/default/objects/Legislative_District__c/fields/Population_with_Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Population_with_Disabilities__c</fullName>
    <label>Population with Disabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>