force-app/main/default/objects/Legislative_District__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Big Bear Lake</fullName>
            </value>
            <value>
                <fullName>Coachella Valley</fullName>
            </value>
            <value>
                <fullName>Encino</fullName>
            </value>
            <value>
                <fullName>Milpitas</fullName>
            </value>
            <value>
                <fullName>Mojave Desert</fullName>
            </value>
            <value>
                <fullName>Moreno Valley</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Palo Alto</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Joaquin Valley</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>South Bay</fullName>
            </value>
            <value>
                <fullName>Van Nuys</fullName>
            </value>
            <value>
                <fullName>Westside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>