force-app/main/default/objects/Legislative_District__c/fields/Total_Counties__c.field-meta.xml
<CustomField>
    <fullName>Total_Counties__c</fullName>
    <label>Total Counties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>