force-app/main/default/objects/Legislative_District__c/fields/Total_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Facilities__c</fullName>
    <label>Total Facilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>