force-app/main/default/objects/Legislative_District__c/fields/Total_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants__c</fullName>
    <label>Total Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>